examples/test/testpolicy14955.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14955
  namespace: namespace170
spec:
  podSelector:
    matchLabels:
      key36: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value30
      podSelector:
        matchLabels:
          key1: value36
          key30: value27
          key3: value10
